<resources>
    <string name="btnDownload" translatable="false">Download Data</string>
    <string name="promptemail">Email</string>
    <string name="promptpassword">Password</string>
    <string name="actionsignin">Login</string>
    <string name="actionsigninshort">Sign in</string>
    <string name="checkpendingforms">CHECK PENDING FORMS</string>
    <string name="startinterview" translatable="false">START INTERVIEW</string>
    <string name="openHouseholdForm" translatable="false">OPEN HOUSEHOLD FORM</string>
    <string name="addChild" translatable="false">ADD A CHILD</string>
    <string name="openbloodform" translatable="false">UPDATE BLOOD INFORMANTION</string>
    <string name="openstoolform" translatable="false">UPDATE STOOL INFORMANTION</string>
    <string name="recordssummary">Records Summary</string>
    <string name="mainmenu">Main Menu</string>
    <string name="onlyfortesting">ONLY FOR TESTING</string>
    <string name="district" translatable="false">DISTRICT</string>
    <string name="uc" translatable="false">UC</string>
    <string name="btnSave" translatable="false">Save</string>
    <string name="btnEnd" translatable="false">Cancel</string>
    <string name="signin" translatable="false">SIGN IN</string>
    <string name="username" translatable="false">Username</string>
    <string name="password" translatable="false">Password</string>
    <string name="newPassword" translatable="false">New Password</string>
    <string name="confirmPassword" translatable="false">Confirm Password</string>
    <string name="country">Language (Click to change)</string>
    <string name="pakistan" translatable="false">Pakistan</string>
    <string name="tajikistan" translatable="false">Tajikistan</string>
    <string name="btnLogin" translatable="false">Login</string>
    <string name="btnReset" translatable="false">Reset</string>
    <string name="btnDownloadData" translatable="false">Download Data</string>
    <string name="csMAexist" translatable="false">might be already exist</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today">Today</string>
    <string name="select">Select</string>
    <string name="invalid_time_error">Invalid Date!</string>
    <string name="invalid_time_error_desc">Please select the valid date</string>
    <string name="invalid_time_max_error_desc">Maximum observation time would be %d days</string>
    <string name="time_not_selected_error_desc">Valid date or time must be selected</string>
    <string name="patients_list">Patients List</string>
    <string name="add_patient">Add Patient</string>
    <string name="empty_patient_list">Patient list is empty</string>
    <string name="patient_details">Patient Details</string>
    <string name="patient_name">Patient name</string>
    <string name="age">Age</string>
    <string name="intake_followup">Intake Followup</string>
    <string name="time_intake">Time Intake </string>
    <string name="food_intake">Food Intake</string>
    <string name="add_food">Add Food</string>
    <string name="add">Add</string>
    <string name="qty">Qty</string>
    <string name="enter_food_name">Enter food name</string>
    <string name="any_new_ingredient">Any new ingredient?</string>
    <string name="no_ingredients_found">No ingredients found</string>
    <string name="add_food_empty_error">Please add food first</string>
    <string name="add_quantity_empty_error">Please add quantity</string>
    <string name="add_ingredient_empty_error">Please add ingredients of food</string>
    <string name="item_already_added_error_desc">Item already added in the list</string>
    <string name="item_already_added_error">Already added!</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_ingr">Are you sure you want to delete this ingredient?</string>
    <string name="are_you_sure_food">Are you sure you want to remove this food?</string>
    <string name="empty_food_list">Empty %s List</string>
    <string name="no_meal_taken">No meal taken at this time</string>
    <string name="be_careful">Be Careful!</string>
    <string name="no_meal_taken_error_desc">Please add any food or check \'No Meal Taken\' checkbox to proceed</string>
    <string name="all_ingr_checked_error_desc">All ingredients must be checked</string>
    <string name="data_not_download_correctly">Data not downloaded correctly</string>
    <string name="empty_ingredients_list">No Ingredients</string>
    <string name="submit">Submit</string>
    <string name="field_empty_error">Empty Field!</string>
    <string name="field_empty_error_desc">Please fill out all the required fields</string>
    <string name="select_meal_time">Select food time</string>
    <string name="select_meal_date">Select food date</string>
    <string name="select_date_intake_record">Date of food intake</string>
    <string name="select_date_intake_record_desc">Select date of food intake</string>
    <string name="select_date">Select date</string>
    <string name="date_format">DD/MM/YYYY</string>
    <string name="select_food_time">Intake Time!</string>
    <string name="select_food_time_desc">Please select the time of food intake</string>
    <string name="select_food_date">Food Intake Date!</string>
    <string name="select_food_date_desc">Please select the date of food intake</string>
    <string name="home">HOME</string>
    <string name="market">MARKET</string>
    <string name="place_prepared">Place prepared</string>
    <string name="place_prepared_error">Place Prepared!</string>
    <string name="place_prepared_error_desc">Please select place of food prepared</string>
    <string name="scale">Scale</string>
    <string name="unit">Unit</string>
    <string name="select_scale_type_error">Select Scale Type!</string>
    <string name="select_scale_type_error_desc">Please select scale type</string>
    <string name="select_scale_error">Select Scale Type!</string>
    <string name="select_scale_error_desc">Please select scale</string>
    <string name="size">Size</string>
    <string name="select_size_error">Select Size!</string>
    <string name="select_size_error_desc">Please select size</string>
    <string name="records_added_successfully">Records added successfully</string>
    <string name="netwrok" translatable="false">Network connection not available!</string>
    <string name="invalidpass" translatable="false">Invalid Password</string>
    <string name="unameRequired" translatable="false">Username is required.</string>
    <string name="incorrcetPass" translatable="false">Incorrect Password</string>
    <string name="downData" translatable="false">Download Data</string>
    <string name="permission" translatable="false">Permissions Required</string>
    <string name="warning" translatable="false">Warning</string>
    <string name="newApp" translatable="false">New App downloaded!!</string>
    <string name="appVer" translatable="false">App New Version</string>
    <string name="downloaded" translatable="false">Downloaded</string>
    <string name="appDownload" translatable="false">appDownload</string>
    <string name="newVer" translatable="false">New Version</string>
    <string name="downloading" translatable="false">Downloading</string>
    <string name="available" translatable="false">Available</string>
    <string name="downError" translatable="false">Cant download.. Internet connectivity issue!</string>
    <string name="backbtn" translatable="false">Press Back again to Exit</string>
    <string name="noNetwork" translatable="false">No network connection available!</string>
    <string name="appAvailable" translatable="false">APP is available!</string>
    <string name="oldAppMsg" translatable="false">App Ver." + " is now available. Your are currently using older Ver."</string>
    <string name="installNewApp" translatable="false">Install new version to use this app</string>
    <string name="install" translatable="false">Install</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="complete" translatable="false">complete</string>
    <string name="updatingError" translatable="false">Error in updating db!!</string>
    <string name="updateDbError1" translatable="false">"Sorry. You can`t go further."</string>
    <string name="updateDbError2" translatable="false">"Please contact IT Team (Failed to update DB)"</string>
    <string name="bckbtn" translatable="false">You Cant go back</string>
    <string name="processing" translatable="false">Processing</string>
    <string name="confirmation" translatable="false">Confirmation!</string>
    <string name="confirm">Confirm?</string>
    <string name="cntbtn" translatable="false">Are you sure, you want to continue - interview</string>
    <string name="failedUpdateDb" translatable="false">SORRY! Failed to update DB</string>
    <string name="invalidDate" translatable="false">Invalid date!</string>
    <string name="ageCalc" translatable="false">"Both Month and Year don`t be zero!!"</string>
    <string name="actiondatabase" translatable="false">Database Manager</string>
    <string name="actiondatasync" translatable="false">Sync Data</string>
    <string name="errorinvalidpassword">This password is too short</string>
    <string name="errorfieldrequired">This field is required</string>
    <string name="errorincorrectpassword">This password is incorrect</string>
    <string name="upd_db_form" translatable="false"> updateDB(Form):\t </string>
    <string name="upd_db_error" translatable="false"> Updating Database… ERROR! </string>
    <string name="db_excp_error" translatable="false"> Database Exception... ERROR! </string>
    <string name="upd_db" translatable="false"> Updating Database...\t </string>
    <string name="fail_db_upd" translatable="false"> Failed to Update Database! </string>
    <string name="backPress" translatable="false"> Back Press Not Allowed </string>
    <string name="invalid_response" translatable="false"> Invalid Response </string>
    <string name="agecal" translatable="false">ageCal:\t</string>
    <string name="title_child_dialog" translatable="false">Child Count</string>
    <string name="message_child_dialog_proceeed" translatable="false">You have entered only %1$s of %2$s Children in the household. \nAre you sure you want to continue now?</string>
    <string name="message_child_dialog_addmore" translatable="false">You have already entered %1$s Children. \nAre you sure you want to add more Child?</string>
    <string name="network_conn_error" translatable="false"> Network connection not available ! </string>
    <string name="no_mother_selected_child_list" translatable="false"> No Mother has been selected. Please select a mother before opening Child List </string>
    <string name="onitemselected" translatable="false"> onItemSelected(Samples):\t </string>
    <string name="upd_samples" translatable="false"> updateDB(Samples):\t </string>
    <string name="upd_anthro" translatable="false"> updateDB(Anthro):\t </string>
    <string name="d201">Select the Child’s Name from drop down list</string>
    <string name="d201_title">This Section will be filled for index child</string>
    <string name="d200">NUTRITIONAL IRON STATUS ASSESSMENT</string>
    <string name="d200main">SECTION - D2:</string>
    <string name="d201_title2">Identification</string>
    <string name="d202">Verbal consent and assent granted</string>
    <string name="d20201">Yes</string>
    <string name="d204_title">Nutritional Iron status assessment of participant Read aloud to participant: we are going to assess (CHILD NAME) iron status                                                               </string>
    <string name="d20202">No</string>
    <string name="d203">Interview Status</string>
    <string name="d20301">Completed</string>
    <string name="d20302">Withdrawn</string>
    <string name="d20303">Refused</string>
    <string name="d204">Haemoglobin</string>
</resources>