<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="form"
            type="edu.aku.abdulsajid.nanm2022.models.Adolescent" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/app_bg_effect"
        android:orientation="vertical">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/CustomToolbarTheme"
            app:popupTheme="@style/CustomPopupTheme"
            app:subtitle="@string/d200"
            app:subtitleTextAppearance="@style/Toolbar.SubtitleText"
            app:title="@string/d200main"
            app:titleTextAppearance="@style/Toolbar.TitleText" />


        <!--SELECTED PERSON-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/sub_labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="sno"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/sno"
                style="@style/sub_labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="sno" />

            <TextView
                style="@style/sub_labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Index"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/index"
                style="@style/sub_labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Index" />

            <TextView
                style="@style/sub_labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/name"
                style="@style/sub_labels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Name" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/GrpName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- d201  Input   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVd201"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bottom"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/quesNum"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/Q_d201" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/d201" />

                        </LinearLayout>

                        <EditText
                            android:id="@+id/d201"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz0123456789,. "
                            android:hint="@string/d201"
                            android:text="@={form.d201}" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- d201_title  Title   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVd201_title"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/d201_title" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- d200  Title   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVd200"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/d200" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- d201_title2  Title   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVd201_title2"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/d201_title2" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- d202  Radio   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVd202"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bottom"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/quesNum"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/Q_d202" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/d202" />

                        </LinearLayout>

                        <RadioGroup
                            android:id="@+id/d202"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/d20201"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked="@{form.d202.equals(`1`)}"
                                android:onClick="@{()->form.setD202(`1`)}"
                                android:text="@string/d20201" />

                            <RadioButton
                                android:id="@+id/d20202"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked="@{form.d202.equals(`2`)}"
                                android:onClick="@{()->form.setD202(`2`)}"
                                android:text="@string/d20202" />
                        </RadioGroup>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- d203  Radio   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVd203"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bottom"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/quesNum"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/Q_d203" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/d203" />

                        </LinearLayout>

                        <RadioGroup
                            android:id="@+id/d203"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/d20301"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked="@{form.d203.equals(`1`)}"
                                android:onClick="@{()->form.setD203(`1`)}"
                                android:text="@string/d20301" />

                            <RadioButton
                                android:id="@+id/d20302"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked="@{form.d203.equals(`2`)}"
                                android:onClick="@{()->form.setD203(`2`)}"
                                android:text="@string/d20302" />

                            <RadioButton
                                android:id="@+id/d20303"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked="@{form.d203.equals(`3`)}"
                                android:onClick="@{()->form.setD203(`3`)}"
                                android:text="@string/d20303" />
                        </RadioGroup>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- d204  Input-Numeric   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVd204"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bottom"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/quesNum"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/Q_d204" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/d204" />

                        </LinearLayout>

                        <TextView
                            style="@style/info"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/d204_title" />

                        <com.edittextpicker.aliazaz.EditTextPicker
                            android:id="@+id/d204"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/d204"
                            android:inputType="number"
                            android:maxLength="3"
                            android:text="@={form.d204}"
                            app:maxValue="100"
                            app:minValue="1"
                            app:type="range" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <!--EndButton LinearLayout-->
                <RelativeLayout
                    android:id="@+id/llbtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layoutDirection="ltr"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <Button
                        android:id="@+id/btnEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/button_shape_red"
                        android:onClick="btnEnd"
                        android:padding="10dp"
                        android:text="Cancel"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btnContinue"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/button_shape_green"
                        android:backgroundTintMode="src_atop"
                        android:onClick="btnContinue"
                        android:padding="10dp"
                        android:text="Save"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </RelativeLayout>
                <!--EndButton LinearLayout-->
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>